--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,8 @@
+*{
+    text-decoration: none!important;
+}
 body {
     background: #120922;
     list-style-type: none;
+    text-decoration: none;
 }
