--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -49,6 +49,11 @@ li:hover .play{
     width: 100%;
     height: 5rem;
     }
+
+    button:hover {
+        background-color: #0a6bb4;
+        font-size: larger;
+      }
   @media only screen and (max-width: 600px) {
 
 #video{
