--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -37,7 +37,8 @@ li:hover .play{
 
 .thumbnail{
     width: 100%;
-    height:100%
+    height:100%;
+    transition-duration: 0.4s;
   }
   
   .navimg{
